--- a/m/busi/index.html
+++ b/m/busi/index.html
@@ -7,74 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>首页</title>
     <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
+    <style type="text/css">
+    html,
+    body {
+        height: 100%;
+    }
+    </style>
 </head>
 
 <body>
     <div class="weui-tab">
         <div class="weui-tab__panel">
+            <div class="weui-grids">
+                <a href="apply.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="../images/icon_tabbar.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">新商户入网</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="../images/icon_tabbar.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">存量开通业务</p>
+                </a>
+                <a href="mchnt-base-info.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="../images/icon_tabbar.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">商户管理</p>
+                </a>
+                <a href="term-info.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="../images/icon_tabbar.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">终端管理</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="../images/icon_tabbar.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">...</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="../images/icon_tabbar.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">...</p>
+                </a>
+            </div>
         </div>
         <div class="weui-tabbar">
-            <a href="javascript:;" class="weui-tabbar__item">
-                <span style="display: inline-block;position: relative;">
-                        <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-                        <span class="weui-badge" style="position: absolute;top: -2px;right: -13px;">8</span>
-                </span>
+            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
+                <img src="../images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">微信</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
-                <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+                <img src="../images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">通讯录</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
-                <span style="display: inline-block;position: relative;">
-                        <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-                        <span class="weui-badge weui-badge_dot" style="position: absolute;top: 0;right: -6px;"></span>
-                </span>
+                <img src="../images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">发现</p>
             </a>
-            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
-                <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+            <a href="javascript:;" class="weui-tabbar__item">
+                <img src="../images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">我</p>
             </a>
         </div>
-    </div>
-    <div class="weui-grids">
-        <a href="apply.html" class="weui-grid">
-            <div class="weui-grid__icon">
-                <img src="../images/icon_tabbar.png" alt="">
-            </div>
-            <p class="weui-grid__label">新商户入网</p>
-        </a>
-        <a href="javascript:;" class="weui-grid">
-            <div class="weui-grid__icon">
-                <img src="../images/icon_tabbar.png" alt="">
-            </div>
-            <p class="weui-grid__label">存量开通业务</p>
-        </a>
-        <a href="mchnt-base-info.html" class="weui-grid">
-            <div class="weui-grid__icon">
-                <img src="../images/icon_tabbar.png" alt="">
-            </div>
-            <p class="weui-grid__label">商户管理</p>
-        </a>
-        <a href="term-info.html" class="weui-grid">
-            <div class="weui-grid__icon">
-                <img src="../images/icon_tabbar.png" alt="">
-            </div>
-            <p class="weui-grid__label">终端管理</p>
-        </a>
-        <a href="javascript:;" class="weui-grid">
-            <div class="weui-grid__icon">
-                <img src="../images/icon_tabbar.png" alt="">
-            </div>
-            <p class="weui-grid__label">...</p>
-        </a>
-        <a href="javascript:;" class="weui-grid">
-            <div class="weui-grid__icon">
-                <img src="../images/icon_tabbar.png" alt="">
-            </div>
-            <p class="weui-grid__label">...</p>
-        </a>
     </div>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
