--- a/m/busi/apply.html
+++ b/m/busi/apply.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div id="flow">
+   	<div id="flow">
         <div class="flow__step" title="填写基本信息">
             <!-- 填写基本信息开始 -->
             <div class="weui-cells__title">联系信息</div>
@@ -39,7 +39,7 @@
                         <label class="weui-label">手机号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" type="text" name="mobile" validType="mobile" placeholder="请输入手机号" required>
+                        <input class="weui-input for_base" type="text" name="mobile" validType="mobile" invalidTips="请输入有效的手机号" placeholder="请输入手机号" required>
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -47,7 +47,7 @@
                         <label class="weui-label">常用邮箱</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" type="text" name="email" invalidType="email" placeholder="请输入常用邮箱">
+                        <input class="weui-input for_base" type="text" name="email" invalidType="email" invalidTips="请输入有效的邮箱" placeholder="请输入常用邮箱">
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                         <label class="weui-label">营业执照号</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" name="license_no" type="text" placeholder="请输入营业执照号" style="text-transform:uppercase;">
+                        <input class="weui-input for_base" name="license_no" type="text" placeholder="请输入营业执照号" onkeyup="this.value=this.value.toUpperCase()">
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                         <label for="" class="weui-label">证件类型</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <select class="weui-select for_busi" name="cert_type" id="cert_type" value="01">
+                        <select class="weui-select for_base" name="cert_type" id="cert_type" value="01">
                         	<option value="01">身份证</option>
                         </select>
                     </div>
@@ -198,7 +198,7 @@
                         <label class="weui-label">证件号码<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" name="cert_id" required="" type="text" placeholder="请输入证件号码" validType="idnum">
+                        <input class="weui-input for_base" name="cert_id" required="" type="text" placeholder="请输入证件号码" validType="idnum" invalidTips="请输入有效的证件号码">
                     </div>
                 </div>
             </div>
@@ -242,7 +242,7 @@
                             <label for="" class="weui-label">收单机构</label>
                         </div>
                         <div class="weui-cell__bd">
-                            <input class="weui-input" type="text" id="acq_inst_id" name="acq_inst" placeholder="请选择收单机构" readonly>
+                            <input class="weui-input" type="text" id="acq_inst_id" placeholder="请选择收单机构" readonly>
                             <input class="for_busi" type="hidden" name="acq_inst_id">
                         </div>
                     </div>
@@ -566,6 +566,7 @@
 			$('#addr').val(addComp.province + addComp.city + addComp.district + addComp.street);
 		});
 	}); */
+	var images = [];
 	function serializeDetail() {
 		var data = {};
 		var base_info = {};
@@ -592,18 +593,7 @@
 		});
 		data.busi_param = busi_param;
 		
-		var elec_info = [];
-		$('#flow').find('.weui-uploader__files').each(function(i, element) {
-			var type = $(element).attr('id');
-			var container = $(element).children('.weui-uploader__file').each(function(i, ele) {
-				var fileData = $(ele).prop('file');
-				alert(JSON.stringify(fileData));
-				fileData['elec_info_type'] = type;
-				elec_info.push(fileData);
-			});
-		});
-
-		data.elec_info = elec_info;
+		data.elec_info = images;
 
 		return data;
 	}
@@ -648,7 +638,7 @@
         if ($(this).prop('checked')) {
             $(this).closest('.weui-cell').siblings().show();
         } else {
-            $(this).closest('.weui-cell').siblings().hide().find('input').val("");
+            $(this).closest('.weui-cell').siblings().hide().find('input').val("").change();
         }
     });
 	
@@ -669,7 +659,7 @@
 		$('#acq_inst_id').on('focus', function() {
             $$.showSelect2(this, {
                 title: '搜索收单机构',
-                valueField: 'acq_inst_cd',
+                valueField: 'acq_inst_id',
                 textField: 'acq_inst_nm',
                 url: '/action/bm/acq-inst/search'
             }).search();
@@ -710,16 +700,17 @@
 	})
 	
 	$('.weui-uploader').each(function(i, element) {
-		Uploader(this, {});
+		Uploader(this);
 	});
 	
 	function Uploader(target, options) {
+		options = options || {};
 		var url = options.url || '/action/upload';
 		var max_size = options.max_size || 10;
 		var max = options.max || 1;
 		options = $.extend({
 			url: url,
-			onBeforeSend: function(data, headers, files) {
+			onBeforeSend: function(data, headers) {
 				console.log(this, arguments);
 				if(["image/jpg", "image/jpeg", "image/png", "image/gif"].indexOf(this.type) < 0){
 					weui.alert('请上传图片');
@@ -729,18 +720,12 @@
 					weui.alert('请上传不超过10M的图片');
 					return false;
 				}
-				if (files.length > max) { // 防止一下子选择过多文件
-					weui.alert('最多同时传'+max+'张图片，请重新选择');
-					return false;
-				}
 				// return false; // 阻止文件上传
 			},
 			onSuccess: function (ret) {
 		        console.log(this, ret);
-				var data = {};
-				data.status = '1';
-            	data.serverid = ret.serverid;
-				$(this).data('file', data);
+				var elec_info_type = $(target).find('.weui-uploader__files').attr('id');
+				images.push({status:'1', serverid:ret.serverid, elec_info_type: elec_info_type});
 		    },
 		    onError: function(err){
 		        console.log(this, err);
