--- a/m/index.html
+++ b/m/index.html
@@ -1,64 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>e通</title>
-    <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>首页</title>
+    <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="css/ui-base.css">
     <style type="text/css">
-		.item {
-			position: relative;
-			background-color: lightblue;
-			height: 120px;
-			margin: 5px 0px;
-		}
-		
+    html,
+    body {
+        height: 100%;
+    }
     </style>
-    
 </head>
 
-<body class="page_show">
-    <div class="page__hd" style="padding: 0;">
-    	<div class="weui-cell">
-    		<a class="weui-cell__hd icon-my" href="tab-my.html"></a>
-    		<h3 class="weui-cell__bd" align="center">Allinpay</h3>
-    		<!--a class="weui-cell__ft" href="javascript:">aa</a-->
-    	</div>
+<body>
+    <div class="weui-tab">
+        <div class="weui-tab__panel">
+            <div class="weui-grids">
+                <a href="busi/apply.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_article.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">新商户入网</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_icons.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">存量开通业务</p>
+                </a>
+                <a href="busi/mchnt-base-info.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_button.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">商户管理</p>
+                </a>
+                <a href="busi/term-info.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_tab.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">终端管理</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_actionSheet.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">&nbsp;</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_actionSheet.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">&nbsp;</p>
+                </a>
+            </div>
+        </div>
+        <div class="weui-tabbar">
+            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
+                <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
+                <i class="icon-home"></i>
+                <p class="weui-tabbar__label">首页</p>
+            </a>
+            <a href="javascript:;" class="weui-tabbar__item">
+                <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
+                <p class="weui-tabbar__label">通讯录</p>
+            </a>
+            <a href="javascript:;" class="weui-tabbar__item">
+                <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
+                <p class="weui-tabbar__label">发现</p>
+            </a>
+            <a href="my.html" class="weui-tabbar__item">
+                <!-- <img src="images/icon_nav_button.png" alt="" 
+                class="weui-tabbar__icon"> -->
+                <i class="icon-my"></i>
+                <p class="weui-tabbar__label">我</p>
+            </a>
+        </div>
     </div>
-    <div class="page__bd page__bd_spacing">
-       <div class="weui-flex item">
-		   <a href="busi/apply.html" class="weui-flex__item">
-      			<div style="text-align: center;padding: 40px; color:white"><h2>入网申请</h2></div>
-      	   </a>
-       </div>
-       <div class="weui-flex item">
-		   <a href="busi/acq-busi.html" class="weui-flex__item">
-		   		<div style="text-align: center;padding: 40px; color:white"><h2>开通业务</h2></div>
-		   </a>
-	   </div>
-	   <div class="weui-flex item">
-		   <a href="busi/dmf-busi.html" class="weui-flex__item">
-		   		<div style="text-align: center;padding: 40px; color:white"><h2>商户管理</h2></div>
-		   </a>
-	   </div>
-	   <div class="weui-flex item">
-		   <a href="busi/dmf-busi.html" class="weui-flex__item">
-		   		<div style="text-align: center;padding: 40px; color:white"><h2>终端管理</h2></div>
-		   </a>
-	   </div>
-    </div>
-    
-    <script type="text/javascript" src="js/lib/zepto.js"></script>
-    <script type="text/javascript" src="js/lib/weuijs/weuijs.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript">
-        $(function() {
-            $$.request('/action/user/view', {}, function(data) {
-                if (data.errcode == 0) {}
-            });
-        });
     </script>
 </body>
 
