--- a/m/busi/apply.html
+++ b/m/busi/apply.html
@@ -58,7 +58,7 @@
                         <label class="weui-label">商户名称<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" name="mchnt_name" type="text" placeholder="请输入商户名称" required>
+                        <input class="weui-input for_base for_busi" name="mchnt_name" type="text" placeholder="请输入商户名称" required>
                     </div>
                 </div>
                 <!--div class="weui-cell">
@@ -85,7 +85,7 @@
                         <label class="weui-label">详细地址<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input for_base" name="addr" required="" type="text" placeholder="请输入详细地址">
+                        <input class="weui-input for_base" name="addr" id="addr" required="" type="text" placeholder="请输入详细地址">
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                 <div>
                     <label class="weui-cell weui-check__label" for="s11">
                         <div class="weui-cell__hd">
-                            <input type="checkbox" class="weui-check for_busi" id="s11" name="busi_type" value="ACQ">
+                            <input type="checkbox" class="weui-check for_busi" id="s11" name="busi_type" value="SD">
                             <i class="weui-icon-checked"></i>
                         </div>
                         <div class="weui-cell__bd">
@@ -339,7 +339,7 @@
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" required="" name="subbranch_name" id="subbranch_name" placeholder="请选择开户支行" readonly>
-                        <input class="for_busi" type="hidden" name="account_bank_id">
+                        <input class="for_busi" type="hidden" name="account_bank_branch_cd">
                     </div>
                 </div>
             </div>
@@ -516,7 +516,7 @@
     <script type="text/javascript" src="../js/lib/zepto.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.js"></script>
     <script type="text/javascript" src="../js/district.js"></script>
-    <script src="http://api.map.baidu.com/api?v=1.4" type="text/javascript"></script>
+    <script src="http://api.map.baidu.com/api?v=1.3" type="text/javascript"></script>
     <script type="text/javascript">
 		
 	var getLocation = function (successFunc, errorFunc) { 
@@ -559,13 +559,13 @@
 				errorFunc("你的浏览器不支持获取地理位置信息。");
 		}
 	}
-	/*
+	
 	$(function(){
-		getLocation(function(){
+		getLocation(function(addComp){
 			console.log(arguments);
-			$('#addr').val(addComp.province + addComp.city + addComp.district + addComp.street);
+			$('#addr').val(addComp.province + addComp.city + addComp.district + addComp.street + addComp.streetNumber);
 		});
-	}); */
+	}); 
 	var images = [];
 	function serializeDetail() {
 		var data = {};
