--- a/m/my.html
+++ b/m/my.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>首页</title>
     <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="css/ui-base.css">
     <style type="text/css">
     html,
     body {
@@ -17,7 +18,6 @@
 
 <body>
     <div class="weui-tab">
-        <div class="weui-cells__title" style="margin: 1em auto; text-align: center; font-size: 18px; color: #000;">我</div>
         <div class="weui-panel weui-panel_access">
             <div class="weui-panel_bd">
                 <a href="my/info.html" class="weui-media-box weui-media-box_appmsg weui-cell_access">
@@ -46,20 +46,23 @@
         <br>
         <a href="javascript:;" class="weui-btn weui-btn_warn" onclick="logout()">退出</a>
         <div class="weui-tabbar">
-            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
-                <img src="images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-                <p class="weui-tabbar__label">微信</p>
+            <a href="index.html" class="weui-tabbar__item">
+                <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
+                <i class="icon-home"></i>
+                <p class="weui-tabbar__label">首页</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
-                <img src="images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+                <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">通讯录</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
-                <img src="images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+                <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">发现</p>
             </a>
-            <a href="my.html" class="weui-tabbar__item">
-                <img src="images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
+                <!-- <img src="images/icon_nav_button.png" alt="" 
+                class="weui-tabbar__icon"> -->
+                <i class="icon-my"></i>
                 <p class="weui-tabbar__label">我</p>
             </a>
         </div>
